plugins {
    id "jacoco"
    id "org.jetbrains.intellij" version "1.17.4"
    id "com.github.hierynomus.license" version "0.16.1"
    id "com.github.gradle-git-version-calculator" version "1.1.0"
    id 'net.researchgate.release' version '3.1.0'
    id "com.gradle.plugin-publish" version "1.3.0"
    id "com.github.spotbugs" version "6.0.27"
    id "org.sonarqube" version "6.0.1.5171"
    id 'signing'
}

repositories {
    mavenCentral()
}

tasks{
    runPluginVerifier {
        ideVersions = ["2024.3"]
    }
}

group = "org.wso2.lsp4intellij"
version = gitVersionCalculator.calculateVersion("v")

intellij {
    version = '2024.3'
    type = 'IC'
    updateSinceUntilBuild = false
}

dependencies {
    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.23.1'
    implementation 'com.vladsch.flexmark:flexmark:0.64.8'
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:5.14.2'
}

test {
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

license {
    header = rootProject.file("resources/license/HEADER.txt")
    ext["year"] = Calendar.getInstance().get(Calendar.YEAR)
    ext["author"] = "WSO2 Inc. (http://www.wso2.org)"
    strictCheck = true
    skipExistingHeaders = true
    mapping("java", "SLASHSTAR_STYLE")
    exclude("/**/*.png")
}

spotbugs {
    ignoreFailures = true
}

spotbugsMain {
    reports {
        xml.required = false
        html.required = true
    }
    def excludeFile = file('spotbugs-exclude.xml')
    if(excludeFile.exists()) {
        excludeFilter = excludeFile
    }
}

spotbugsTest {
    enabled = false
}

check {
    dependsOn(tasks.jacocoTestReport)
}

jacocoTestReport {
    reports {
        xml.required = true
        xml.outputLocation = layout.buildDirectory.file("reports/jacoco/test/jacoco.xml")
    }
}

sonarqube {
    properties {
        property("sonar.sourceEncoding", "UTF-8")
        property("sonar.host.url", "https://sonarcloud.io")
        property("sonar.organization", "ballerina-platform")
        property("sonar.projectKey", "ballerina-platform_lsp4intellij")
        property("sonar.projectName", "LSP4IntelliJ")
        property("sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacoco.xml").get().asFile.path)
    }
}

release {
    failOnCommitNeeded = true
    failOnPublishNeeded = true
    failOnSnapshotDependencies = true
    failOnUnversionedFiles = true
    failOnUpdateNeeded = true
    revertOnFail = true
    preCommitText = ''
    preTagCommitMessage = '[Gradle Release Plugin] - pre tag commit: '
    tagCommitMessage = '[Gradle Release Plugin] - creating tag: '
    newVersionCommitMessage = '[Gradle Release Plugin] - new version commit: '
    tagTemplate = '${version}'
    versionPropertyFile = 'gradle.properties'
    buildTasks = ['jar']

    git {
        requireBranch.set('release-stage')
        pushToRemote.set('upstream')
        commitVersionFileOnly.set(false)
        signTag.set(false)
    }
}
